tests/error_propagation/tin_expression_in_when.nim
discard """
  errormsg: "undeclared identifier: 'missing'"
"""

var x = missing
when x is int:
  discard
